<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".presentation.SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/set_theme"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolPinkTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_circle"
            android:tint="@color/cool_pink" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolBlueTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_circle"
            android:tint="@color/cool_blue" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolPurpleTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_circle"
            android:tint="@color/purple_500" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolGreenTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_circle"
            android:tint="@color/cool_green" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolBlackTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_circle"
            android:tint="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:layout_marginVertical="2dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center|start"
            android:paddingStart="5dp"
            android:text="@string/sort_by"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/sortBtn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:src="@drawable/ic_sort"
            android:tint="@color/cool_pink" />
    </LinearLayout>

    <TextView
        android:id="@+id/versionName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:padding="16dp"
        android:text="@string/version_name"
        android:textColor="@color/black"
        android:textSize="18sp" />
</LinearLayout>